fix: prevent scrollbar jitter and overflow x

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,11 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+  width: 100vw;
+}
+
 
 /* sets up page */
 .main-div-style {
